@@ -60,8 +60,8 @@
 							<div class="level is-mobile">
 								<div class="level-left">
 									<div class="container">
-										<p class="title is-5">Modifica profilo</p>
-										<p class="subtitle is-6">Vedi la lista delle prenotazioni</p>
+										<p class="title is-5">Visualizza profilo</p>
+										<p class="subtitle is-6">Modifica i tuoi dati personali</p>
 									</div>
 								</div>
 								<div class="level-right">
