@@ -30,7 +30,7 @@
 					</div>
 					<div class="field">
 						<div class="control has-icons-left has-icons-right">
-							<input name="password" class="input" type="password" placeholder="Password" required>
+							<input name="password" class="input" type="password" placeholder="Password" required autocomplete="off">
 							<span class="icon is-small is-left">
 								<i class="fas fa-lock"></i>
 							</span>
