@@ -39,12 +39,12 @@
 							</div>
 						</article>
 					</a>
-					<a th:href="@{/user/me}" class="tile is-parent">
+					<a th:href="@{/userProfile}" class="tile is-parent">
 						<article class="tile  has-text-white is-danger is-child box">
 							<div class="level is-mobile">
 								<div class="level-left">
 									<div class="container">
-										<p class="title is-5  has-text-white">Modifica profilo</p>
+										<p class="title is-5  has-text-white">Visualizza profilo</p>
 										<p class="subtitle is-6  has-text-white">Modifica i tuoi dati personali</p>
 									</div>
 								</div>
