@@ -27,7 +27,7 @@
 
 					<div class="field">
 						<label class="label">Cellulare</label>
-						<div class="control has-icons-left has-icons-right">
+						<div class="control has-icons-left has-icons-right" style="max-width: 30%;">
 							<input id="phoneNumber" th:field="${reservation.phoneNumber}" class="input" type="text"
 								placeholder="+39 " onblur="aggiungiPrefisso()" required/>
 
