@@ -1,3 +1,8 @@
+* [F - 17/07/2025]: Changelog.txt, UserController.java :
+    - Aggiunta rotta in UserController per vedere il profilo utente (views userProfile.html)
+    - Aggiunto riferimento all'ancora visualizza profilo
+    - AuthConfiguration aggiunto path per il profilo, visualizzabile da chi autenticato 
+
 * [F - 16/07/2025]: Changelog.txt, dashboard.html, MainController.java, ReservationService.java : 
     - dashboard.html ADMIN modificata, ora come numero di prenotazioni vedi quelle della data corrente
     - MainController.java viene passato al model il numero delle prenotazioni odierne
